# cvg-core

./: README.md  log.txt  pyproject.toml
src/: main.py
src/cvg_core/: __init__.py  proper_procedures.py
src/cvg_core/objects/: __init__.py
src/cvg_core/objects/crypto_object/: ecdh_object.py
src/cvg_core/objects/network_object/: connection_object.py  packet_object.py
src/cvg_core/procedures/: command_send_and_receive.py  crypto_send_and_receive.py  establish_connection.py  send_and_receive.py
src/cvg_core/tests/: __init__.py  shortcut.py  test_send.py  tool.py
